# ChangeLog for sys-fs/lsscsi
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/lsscsi/ChangeLog,v 1.46 2011/01/08 02:58:23 vapier Exp $

*lsscsi-0.24 (08 Jan 2011)

  08 Jan 2011; Mike Frysinger <vapier@gentoo.org> +lsscsi-0.24.ebuild:
  Version bump #351074.

*lsscsi-0.23 (03 Dec 2009)

  03 Dec 2009; Jeroen Roovers <jer@gentoo.org> +lsscsi-0.23.ebuild:
  Version bump.

  05 Oct 2009; Raúl Porcel <armin76@gentoo.org> lsscsi-0.22.ebuild:
  ia64/sparc stable wrt #284384

  30 Sep 2009; Tobias Klausmann <klausman@gentoo.org> lsscsi-0.22.ebuild:
  Stable on alpha, bug #284384

  25 Sep 2009; Brent Baude <ranger@gentoo.org> lsscsi-0.22.ebuild:
  Marking lsscsi-0.22 ppc64 for bug 284384

  19 Sep 2009; nixnut <nixnut@gentoo.org> lsscsi-0.22.ebuild:
  ppc stable #284384

  19 Sep 2009; Robin H. Johnson <robbat2@gentoo.org> lsscsi-0.22.ebuild:
  Adding ~arm support. Tested on mv78100.arm.dev.gentoo.org thanks to
  Marvell.

  15 Sep 2009; Jeroen Roovers <jer@gentoo.org> lsscsi-0.22.ebuild:
  Stable for HPPA (bug #284384).

  14 Sep 2009; Markus Meier <maekke@gentoo.org> lsscsi-0.22.ebuild:
  amd64/x86 stable, bug #284384

  20 Mar 2009; Joseph Jezak <josejx@gentoo.org> lsscsi-0.21.ebuild:
  Marked ppc stable for bug #254656.

  27 Feb 2009; Brent Baude <ranger@gentoo.org> lsscsi-0.21.ebuild:
  stable ppc64, bug 254656

*lsscsi-0.22 (11 Feb 2009)

  11 Feb 2009; Robin H. Johnson <robbat2@gentoo.org> lsscsi-0.19.ebuild,
  +lsscsi-0.22.ebuild:
  Bug 258388: new hosting location. Version bump.

  25 Jan 2009; Raúl Porcel <armin76@gentoo.org> lsscsi-0.21.ebuild:
  sparc stable wrt #254646, add ~ia64

  18 Jan 2009; Markus Meier <maekke@gentoo.org> lsscsi-0.21.ebuild:
  amd64/x86 stable, bug #254656

  18 Jan 2009; Tobias Klausmann <klausman@gentoo.org> lsscsi-0.21.ebuild:
  Stable on alpha, bug #254656

  15 Jan 2009; Jeroen Roovers <jer@gentoo.org> lsscsi-0.21.ebuild:
  Stable for HPPA (bug #254656).
