@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/lsscsi/Attic/lsscsi-0.23.ebuild,v 1.1 2009/12/03 17:10:03 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/lsscsi/Attic/lsscsi-0.23.ebuild,v 1.2 2011/01/08 18:25:30 ranger Exp $
 
 EAPI="2"
 
@@ -12,7 +12,7 @@ SRC_URI="http://sg.danny.cz/scsi/${P}.tgz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ppc ~ppc64 ~sparc ~x86"
 IUSE=""
 
 DEPEND=">=sys-fs/sysfsutils-1.2.0"
